# torchure

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: qwen3_dense.json  qwen3_dense_climbmix.json  qwen3_dense_climbmix_ddp.json
notes/: CHANGES.md  DEV_LOG.md  ROADMAP.md
tests/: checkpointer.py  collective.py  data_parallel.py  dataloader_packing.py  fused_linear_ce.py
torchure/: utils.py
torchure/checkpoint/: checkpointer.py
torchure/core/: collective.py  mesh.py
torchure/dataloader/: builder.py  dataloader.py  packers.py  prefetcher.py  utils.py
torchure/loss/: cross_entropy.py  fused_linear_ce.py
torchure/models/: builder.py
torchure/models/llama3/: llama3.py
torchure/models/qwen3/: qwen3.py
torchure/objectives/: autoregressive.py  builder.py
torchure/optim/: utils.py
torchure/optimizer/: builder.py  scheduler.py
torchure/parallelism/: data_parallel.py
torchure/train/: train.py  trainer.py
