[project]
name = "torchure"
version = "0.1.0"
description = "training stack"
authors = [{name="giyushino", email="allanzhang440@gmail.com" }]

requires-python = "==3.14.*"
keywords = ["pytorch", "training"]

# i want minimal deps, but this will likely
# grow considerably in the future
# scalene -> for gpu + cpu profiling
dependencies = [
    "torch==2.10",
    "numpy==2.4.6",
    "tokenizers",
    "datasets",
    "torchdata",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["torchure*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# defaults (E4/E7/E9 pycodestyle errors + F pyflakes) plus B bugbear, which
# catches real bugs (mutable defaults, raise NotImplemented, silent zips).
# ratchet more rules in over time; don't add formatting churn retroactively.
extend-select = ["B"]

